src/main/resources/containers/nginx/deployment-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginxtest
  name: nginxtest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginxtest
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginxtest
    spec:
      containers:
        - image: registry.gitlab.com/snaphashpubic/nginxtest:latest
          imagePullPolicy: ""
          name: nginxtest
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 30
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
