src/main/resources/containers/nginx/service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxtest
spec:
  type: NodePort
  selector:
    app: nginxtest
  ports:
    - name: nginxtest
      protocol: TCP
      nodePort: 30080
      port: 80
      targetPort: 80
